[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/bullet.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 1 )

[node name="bullet" type="KinematicBody2D"]
position = Vector2( 137, 126 )
z_index = 1
script = ExtResource( 1 )

[node name="bullet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet"]
scale = Vector2( 0.5, 0.1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="bulletColor" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -2.0
margin_right = 5.0
margin_bottom = 2.0

[node name="lifetime" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="bullet" to="." method="_on_bullet_area_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
